src/wordpress/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: wordpress-service
      port:
        number: 80
  rules:
  - host: anas-alHamd-nl-rg3.maxtld.dev
    http:
      paths:
      - path: /dbadmin
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
  tls:
  - hosts:
    - anas-alHamd-nl-rg3.maxtld.dev
    secretName: letsencrypt-nginx
